# eve_noice2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile copy  README.md  Rocket.toml  playing.ipynb  sonar-project.properties
.github/workflows/: docker-image.yml  docker-publish.yml
.sqlx/: query-58ce3e7a22fa07019cfdcf1b94f671c402889ec4f1c688b62110c9634fd29487.json  query-7df6f8d1058ec9e019c4b0b439ebeda7fab305fac3e8dadf083ecf634d575ff3.json  query-c3bfa96f8f30046b0736d33b803435bdd22126bc641ba34a878fd874187dfe96.json
examples/: write_migration.rs
migrations/: 20231001140213_create-initial.sql  20231003114546_add_active_column.sql  20231007100917_add_stargates.sql  20231007110702_update_sde.sql  20231008132734_to_wall_mode.sql
src/: cache.rs  config.rs  eve_auth.rs  eve_esi.rs  main.rs
src/actions/: mod.rs  update_history.rs  update_orders.rs
src/actors/: market_history_actor.rs  market_order_actor.rs  mod.rs  update_scheduler.rs
src/esi/: errors.rs  mod.rs  models.rs
src/jobs/: mod.rs
src/repository/: item.rs  market_history.rs  market_orders.rs  mod.rs
src/routes/: mod.rs
templates/: index.html
