[package]
name = "noice2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"
rocket_oauth2 = "0.4.1"
rocket_db_pools = { version = "=0.1.0-rc.3", features = ["sqlx_sqlite"] }
sqlx = { version = "0.6.0", features = [
    "macros",
    "offline",
    "migrate",
    "sqlite",
    "chrono",
] }

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.25"
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.20", features = ["json"] }
rayon = "1.8.0"
tokio-cron-scheduler = "0.9.4"

actix = "0.11.0"
actix-rt = "2.2"
actix-web = "4"
