[package]
name = "noice2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = ["macros", "migrate", "sqlite", "chrono", "runtime-tokio", "tls-native-tls"] }

tokio = { version = "1.32", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.25"
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.20", features = ["json", "gzip", "rustls-tls"], default-features = false }

tokio-cron-scheduler = "0.9.4"

actix = "0.11.0"
actix-rt = "2.2"
actix-web = "4"
futures = "0.3.28"
log = "0.4.20"

[profile.dev.package.sqlx-macros]
opt-level = 3
